<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackolympic"
    tools:context=".view.LoginFragment">

    <include

        android:id="@+id/include"
        layout="@layout/fragment_intro"
        android:layout_width="413dp"
        android:layout_height="234dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_login_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <FrameLayout
        android:id="@+id/bottomFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blackolympic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/text_bottom_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:text="@string/question_register"
            android:textColor="@color/yellowolympic"
            android:textSize="16sp"
            android:textStyle="bold" />
    </FrameLayout>


    <EditText
        android:id="@+id/username"
        android:layout_width="328dp"
        android:layout_height="46dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/yellowolympic"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/yellowolympic"
        android:textSize="18sp"
        android:windowSoftInputMode="adjustResize"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/password"
        android:layout_width="328dp"
        android:layout_height="44dp"
        android:layout_marginTop="392dp"
        android:backgroundTint="@color/yellowolympic"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/yellowolympic"
        android:textSize="18sp"
        android:windowSoftInputMode="adjustResize"
        app:layout_constraintBottom_toTopOf="@+id/bottomFrameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_login_background"
        app:layout_constraintVertical_bias="0.121" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/yellowolympic"
        android:clickable="true"
        android:enabled="true"
        android:focusable="true"
        android:fontFamily="serif"
        android:text="@string/action_sign_in"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.609"
        tools:ignore="RtlCompat" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/view_login_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>