...
    <fragment
        android:id="@+id/introFragment"
        android:name="it.programmazionemobile.olympicgames2024.view.IntroFragment"
        android:label="fragment_intro">
        <action
            android:id="@+id/action_introFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="it.programmazionemobile.olympicgames2024.view.LoginFragment"
        android:label="fragment_login"
...
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" /> <!-- Aggiunto per rimuovere LoginFragment dal backstack -->
        <action
            android:id="@+id/action_loginFragment_to_mainActivity"
            app:destination="@id/mainActivity"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
...
